--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 500px;
+  min-height: 200px;
   margin: auto;
   margin-bottom: 50px;
   position: relative;
