--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
-  --color-primary: #4d0de5;
-  --color-secondary: #7da1f7;
+  --color-primary: #269af2;
+  --color-secondary: #29468a;
   --color-warning: #fae362;
   --color-error: #f75e4b;
 }
@@ -23,7 +23,7 @@ body {
   justify-content: center;
   /* vasat dar jahat ofoqi */
   align-items: center;
-  padding: 100px 0 200px;
+  padding: 100px 10px 200px;
   border-radius: 0 0 40px 40px;
   background: linear-gradient(
     13deg,
@@ -123,6 +123,7 @@ body {
 #forecast {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 #forecast div {
@@ -131,6 +132,7 @@ body {
   text-align: center;
   border-radius: 20px;
   box-shadow: var(--color-secondary) 0px 25px 80px -25px;
+  margin-bottom: 40px;
 }
 
 #forecast h3 {
@@ -207,4 +209,18 @@ body {
 
 @keyframes l7 {
   to {transform:scale(1.8);opacity:0}
+}
+
+@media (max-width: 500px) {
+  #weather {
+    width: 90%;
+  }
+  #forecast {
+    width: 90%;
+    margin: auto;
+  }
+
+  #weather #info {
+    flex-direction: column;
+  }
 }
